# WeOn

./: CMakeLists.txt  IPlugin.h  Main_Test.cpp
.github/workflows/: cmake-multi-platform.yml
Plugins/Platform/Platform_Win32/: CMakeLists.txt  Handlers_1.cpp  Handlers_2.cpp  Handlers_3.cpp  Init.cpp  OnEvent.cpp  Platform_Win32.h  WindowProcedure.cpp
SubSystem/Event_System/: CMakeLists.txt  Event.cpp  Event.h
SubSystem/Serializer/: CMakeLists.txt  Serializer.cpp  Serializer.h
